DELETE#destroy Sequence.
