# doc/api/v1/api.yaml
@@ -1607,6 +1607,29 @@ paths:
                       enum:
                         - blank
                         - notTime
+    delete:
+      operationId: archive_sequence
+      description: >-
+        We does not allow to destroy sequence - instead its state is changed to 'archived'.
+      summary: Archiving sequence.
+      tags:
+        - sequences
+      parameters:
+        - name: id
+          in: path
+          description: ID of a MailyHerald::Sequence.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: Success
+          schema:
+            properties:
+              sequence:
+                $ref: '#/definitions/Sequence'
+        '404':
+          description: MailyHerald::Sequence not found.
 definitions:
   List:
     type: object
